[tool.poetry]
name = "pybit"
version = "0.1.0"
description = ""
authors = ["Peter Alexander <makeroftools@creativedevelopment.systems>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"





[tool.isort]
profile = "black"
honor_noqa = true
line_length = 120
combine_as_imports = true
force_sort_within_sections = true
known_first_party = "pyan"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | egg-info
  | buck-out
  | build
  | dist
  | env
)/
'''
